MMA-7235 Litt IntelliJ-forslag og static imports